rollback to jdk-11 compatibility (#169)
closes #168

Signed-off-by: Niko Köbler <niko@n-k.de>